# NipoVPN-GUI

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  logger.rs
src/lib/: logger.ts  profiles.svelte.ts  runningProfile.svelte.ts
src/lib/components/: ToastGroup.svelte
src/lib/components/connection/: ConnectionButton.svelte  ConnectionStatus.svelte  LatencyDisplay.svelte  LogPanel.svelte
src/lib/components/header/: About.svelte  Logo.svelte  ModeToggle.svelte
src/lib/components/profiles/: AddProfileButton.svelte  DeleteProfileDialog.svelte  EditProfileDialog.svelte  ImportButton.svelte  ProfileItem.svelte  Profiles.svelte  ShareProfileDialog.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
