[package]
name = "NipoVPN-GUI"
version = "0.2.0"
description = "A sleek, cross-platform desktop GUI for NipoVPN, built with Tauri and Svelte. Features seamless proxy profile management, real-time connection monitoring, low-latency checking, and interactive logs."
authors = ["SattarBayat"]
license = "GPL-3.0"
repository = "https://github.com/Ar4mus/NipoVPN-GUI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
fern = "0.7"
chrono = { version = "0.4", features = ["clock"] }

